# summarization-ai

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/core/: __init__.py  ai.py  settings.py
src/core/base/: __init__.py  model.py  schema.py
src/core/enums/: __init__.py  chat.py
src/db/models/: __init__.py  chat.py  user.py
src/mock/: __init__.py  chat.py  user.py
src/schemas/: __init__.py  chat.py  ouputs.py
src/utils/: __init__.py  dicts.py
